test/files/neg/macro-invalidret-nontree.check
Macros_Test_2.scala:2: error: macro implementation has incompatible shape:
 required: (c: scala.reflect.macros.Context): c.Expr[Any]
 found   : (c: scala.reflect.macros.Context): Int
type mismatch for return type: Int does not conform to c.Expr[Any]
  def foo = macro Impls.foo
                        ^
one error found
